[package]
name = "solver"
version = "0.0.1"
authors = ["Wataru Inariba"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", features = ["custom_alloc"] }
rayon = "1.5"
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.0"

[profile.release]
lto = "thin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
