[package]
name = "range"
version = "0.1.2"
authors = ["Wataru Inariba"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", default-features = false }
wasm-bindgen = "0.2"

[profile.release]
lto = "thin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
