[package]
name = "solver"
version = "0.2.0"
authors = ["Wataru Inariba"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]
path = "../solver-src/lib.rs"

[dependencies]
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", features = ["custom-alloc"] }
rayon = "1.6.1"
wasm-bindgen = "0.2.83"
wasm-bindgen-rayon = { version = "1.0.3", optional = true }

[features]
default = ["wasm-bindgen-rayon"]

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
