[package]
name = "solver"
version = "0.2.3"
authors = ["Wataru Inariba"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]
path = "../solver-src/lib.rs"

[dependencies]
js-sys = "0.3.60"
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", features = ["custom-alloc"] }
rayon = { version = "1.6.1", optional = true }
spmc = "0.3.0"
wasm-bindgen = "0.2.83"

[features]
default = ["rayon"]

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
