[package]
name = "solver"
version = "0.2.7"
authors = ["Wataru Inariba"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]
path = "../solver-src/lib.rs"

[dependencies]
js-sys = "0.3.64"
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", features = ["custom-alloc", "rayon"], default-features = false }
rayon = { version = "1.8.0", optional = true }
spmc = "0.3.0"
wasm-bindgen = "0.2.87"

[features]
default = ["rayon"]

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
