[package]
name = "tree"
version = "0.2.0-alpha.0"
authors = ["Wataru Inariba"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", default-features = false }
wasm-bindgen = "0.2.83"

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
